--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -1,28 +1,79 @@
-.example {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  line-height: 1.5;
-  background-color: #fff;
-  color: #2f2f37;
-  max-width: 960px;
-  padding: 16px;
+// .example {
+//   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+//     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+//   line-height: 1.5;
+//   background-color: #fff;
+//   color: #2f2f37;
+//   max-width: 960px;
+//   padding: 16px;
+// }
+
+// .example code {
+//   font-family: monospace;
+//   font-size: 16px;
+//   font-weight: 700;
+//   background-color: #ff6b0a;
+//   color: #fff;
+//   padding: 2px 6px;
+//   border-radius: 2px;
+// }
+
+// .example .background {
+//   height: 240px;
+//   // ❗️❗️❗️ The path to images from a SASS file
+//   // is always the same as from the css folder.
+//   background-image: url('../images/logo.png');
+//   background-size: cover;
+//   background-position: center;
+// }
+.header {
+  z-index: 999;
+  position: fixed;
+  top: 0;
+  display: flex;
+  width: 100%;
+  height: 10vh;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(to right, red, white);
+}
+.search-form {
+  margin: auto;
+
+  &__btn {
+    border-radius: 8px;
+    padding: 4px;
+  }
+}
+.gallery {
+  justify-content: center;
+  position: relative;
+  flex-wrap: wrap;
+  margin: -10px;
+  padding-top: 100px;
+  padding-bottom: 100px;
+  display: flex;
 }
 
-.example code {
-  font-family: monospace;
-  font-size: 16px;
-  font-weight: 700;
-  background-color: #ff6b0a;
-  color: #fff;
-  padding: 2px 6px;
-  border-radius: 2px;
+.load-more {
+  z-index: 50;
+  position: absolute;
+  top: 85%;
+  left: 80%;
+  padding: 20px 20px;
+  background-color: pink;
+  border-radius: 12px;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
 }
-
-.example .background {
-  height: 240px;
-  // ❗️❗️❗️ The path to images from a SASS file
-  // is always the same as from the css folder.
-  background-image: url('../images/logo.png');
-  background-size: cover;
-  background-position: center;
+.invisible {
+  display: none;
+}
+.load-more .visible {
+  opacity: 1;
+  transition: opacity 0.3s ease-in-out;
+}
+img {
+  width: 400px;
+  height: 300px;
 }
