--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -1,3 +1,3 @@
 <div class="gallery">
-  <button class="load-more visible" type="button">Load More</button>
+  <button class="load-more" type="button">Load More</button>
 </div>
